[REFACTOR] Post JPA 의존성 분리